--- a/givjoy.html
+++ b/givjoy.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Eric Smith's Portfolio</title>
+	<link rel="shortcut icon" href="favicon.ico" />
 	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/img/me3.jpg" />
 	<meta prefix="og: http://ogp.me/ns#" />
 	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/img/me3.jpg"/>
@@ -20,7 +21,7 @@
 	<div id="page-wrapper">
 
 		<!-- Header -->
-		<header id="header">
+		<header id="header" class="alt">
 			<h1><a href="index.html">GivJoy & ProtoHack</a></h1>
 			<nav id="nav">
 				<ul>
@@ -108,7 +109,7 @@
 				<h2>User Flow & Sketches</h2>
 				<div class="row">
 					<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/sender-flow.jpg" alt="" /></span></div>
-					<div class=" 6u$ 12u$(medium)"><blockquote>As we designed a user flow for the joy-sender we tried to take into account the insights we gained from our research.</blockquote></div>
+					<div class=" 6u$ 12u$(medium)"><blockquote>As we designed a user flow for the joy-sender we tried to take into account the insights we gained from our research.<br/><br/>The sketches we're drawn by me with help from one of the marketing individuals.</blockquote></div>
 				</div>
 				<span class="image fit"><img src="images/GivJoy/sketches.jpg" alt="" /></span>
 				<p>
@@ -117,19 +118,19 @@
 					<h4>Next Steps</h4>
 					<p>
 						I think the next steps in our process would be to validate our design with users and <strong>either</strong> iterate the joy-sender design or explore the application views of the other two personas.
-
-						As a junior designer I feel as though I did a good job of sythesizing the high level ideas of our talented buisiness people and forcing them to focus down to a specific user flow and design.
-
-						I also learned that research is <strong>ALWAYS</strong> possible within <strong>ANY</strong> organization and within <strong>ANY</strong> time frame. We did research in a 7 hour project with no budget. 
+						<br/><br/>
+						As a junior designer I intially felt very insecure in a team of more experienced folks. However after ProtoHack I discovered that junior designers have such fresh experiences that we bring to a project. I've learned to be more comfortable and confident in my skills.
+						<br/><br/>
+						I also learned that research is <strong>ALWAYS</strong> possible within <strong>ANY</strong> organization and within <strong>ANY</strong> time frame. We did research in a 7 hour project with no budget and it was infinately helpful in understanding our users. 
 					</p>
-					<h4>Random Thoughts Etc.</h4>
+					<!-- <h4>Random Thoughts Etc.</h4>
 					<p>
 						Amaking sure deliverables are met.proud
 					Dicovery & Reasearch -> Persona
 					Sketching Iterations of Sketching
 					UserFlow
 						biz goals was to create something to give jpy. create joy emotion but not sure of how. allow people to recieve it and to give it. software store, communicator.
-					</p>
+					</p> -->
 					<!-- <p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p> -->
 
 					<!-- <hr /> -->
