--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Eric Smith's Portfolio</title>
+		<link rel="shortcut icon" href="favicon.ico" />
 		<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/img/me3.jpg" />
 		<meta prefix="og: http://ogp.me/ns#" />
 		<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/img/me3.jpg"/>
