--- a/givjoy.html
+++ b/givjoy.html
@@ -21,8 +21,8 @@
 	<div id="page-wrapper">
 
 		<!-- Header -->
-		<header id="header" class="alt">
-			<h1><a href="index.html">GivJoy & ProtoHack</a></h1>
+		<header id="header" >
+			<h1><a href="index.html"></a></h1>
 			<nav id="nav">
 				<ul>
 					<li class="special">
