--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Eric S.</a></h1>
+						<h1><a href="index.html"></a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -54,7 +54,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Hi, My name is Eric!</h2>
-								<p>I'm a UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. I'm also a photographer and love a good nature walk. Below are some case studies I've worked on. For code samples check out my <a href="http://github.com/ecsmith">github</a>.
+								<p>I'm a UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. I also love taking photos and I really enjoy a good nature walk. Below are some case studies I've worked on. For code samples check out my <a href="http://github.com/ecsmith">github</a>.
 								</p>
 							</header>
 							<!-- <ul class="icons major">
