--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<section id="one" class="wrapper style5 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Hi, My name is Eric!</h2>
+								<h2>Hi, I'm Eric!</h2>
 								<p>I'm a UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. I also love taking photos and I really enjoy a good nature walk. Below are some case studies I've worked on. For code samples check out my <a href="http://github.com/ecsmith">github</a>.
 								</p>
 							</header>
