--- a/givjoy.html
+++ b/givjoy.html
@@ -55,48 +55,47 @@
 			</div>
 			<div class="9u$ 12u$(medium)"><h4>GivJoy</h4>
 				<p>Givjoy is a mobile application for allowing a person to bring joy to their friends. GivJoy does this by creating a marketplace for where-in a joy-sender can employ a person with a joy-giving creative talents to bring joy to their friend. GivJoy was created at ProtoHack, a code-free hackathon, in 7 hours.</p>
-			</div>
-
-
-			</div>
-			<div class="row">
-				<div class="3u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/protohack.png" alt="" /></span></div>
-
-					<!-- <h4>The Beginning</h4>
+									<h4>The Beginning</h4>
 					<p>Going into ProtoHack I had no idea what to expect. As a web developer, the idea of a strictly <strong>"no coding"</strong> hackthon seemed backwards to me. If there's been something I've learned about the design world it's that designers get passionate about their designs–I was fearful of how this would come into play in this space.
 					</p>
 					&horbar;To say the least I was <strong>anxious</strong> about what the day would bring. The turnout of ProtoHack mostly consisted of buisiness development professionals, UX designers and marketers. They gave us the morning of ProtoHack to build teams and comes up with ideas for a product. Many passionate individuals even took to the stage to pitch their ideas hoping to find the talent needed to act on them.</p>
-				</div> -->
-				<div class="9u$ 12u$(medium)">
-					<h4>About ProtoHack</h4>
-					<p>ProtoHack exists to show non-coders that they can create something amazing from nothing. It empowers and enables the non-technical community with the tools, knowledge and connections that will help bring their idea to life and visually communicate it through prototyping.
-					Competitors may work in teams (up to 5) or solo. You have 7 hours to prototype your idea and then you present it on stage.</p>
-					</div>
-				</div>
-				</div>
-				</section>
-				<header class="style4">
-				<h2>GivJoy<span class="x">&times;</span>ProtoHack</h2>
-<!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
--->					</header>
-<section class="wrapper style5">
-	<div class="inner">
+			</div>
 
-				<h3>My Role in our Team</h3>
-				<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development experts and 1 other UX Designer besides myself. I was by far the most junior person in the team–Most of the others had been in their respective industries for 5+ years. I wanted to pull my own weight in the team and prove myself.</p>
 
-				<!-- <span class="image left"><img src="images/GivJoy/GivJoy4.jpg" alt="" /></span> -->
-				<h3>Our Initial Steps</h3>
-				<p>ProtoHack has begun! In the beginning each member of the team had various assumptions about what we were going to build. Our initial steps in the process were establishing ground rules, aligning the team, creating a schedule for the day and identifying our problem. I proposed we try an activity similar to an affinity diagraming exercise to flesh out our assumptions. It was this exercise that helped us hone in our intial problem statement:</p>
-				<blockquote><span class="big">Our Users have trouble finding a unique way to spread joy to friends & family. Its time consuming to find unique gifts for them.</span></blockquote>
-				<p>The activity led us to the idea of a mobile marketplace and we hypothesized 3 different user archetypes for the platform. We decided to identify 2 groups, Joy-senders and joy-receivers on the endpoints of the application. The third archetype we hypothesized were the <strong>creatives</strong> who were the basis for the marketplace. The creatives are people who have some sort of creative talent to bring joy to other people. We decided that the platform would work based around these 3 groups.  </p>
-				<blockquote><span class="big">Wouldn't it be great if there was a platform to <strong>give joy</strong> to your loved ones?</span></blockquote>
-				<p>The affinity mapping exercise also revealed that we would need to do more research to <strong>validate our hypotheses</strong>. Together we needed to validate with real people whether the joy bringing platform would be a viable idea. We needed to figure out "What incites joy in people?", "Should gift-giving be part of our solution?" and "What motivation do people have in giving joy?"</p>
+		</div>
+		<div class="row">
+			<div class="3u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/protohack.png" alt="" /></span></div>
 
-				<div class="row">
-					<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/user-groups.png" alt="" /></span></div>
-					<div class=" 6u$ 12u$(medium)"><blockquote>We decided that the scope of the hackthon would be designing a user flow for the <strong>joy-sender</strong>. Much of the research we needed to do had to identify what was important to our user flow on the side of the joy-sender. </blockquote></div>
+			<div class="9u$ 12u$(medium)">
+				<h4>About ProtoHack</h4>
+				<p>ProtoHack exists to show non-coders that they can create something amazing from nothing. It empowers and enables the non-technical community with the tools, knowledge and connections that will help bring their idea to life and visually communicate it through prototyping.
+				Competitors may work in teams (up to 5) or solo. You have 7 hours to prototype your idea and then you present it on stage.</p>
+
 				</div>
+			</div>
+		</div>
+	</section>
+	<header class="style4">
+		<h2>My Team<span class="x">&times;</span>The Beginning</h2>
+	</header>
+	<section class="wrapper style5">
+		<div class="inner">
+
+			<h3>My Role in our Team</h3>
+			<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development experts and 1 other UX Designer besides myself. I was by far the most junior person in the team–Most of the others had been in their respective industries for 5+ years. I wanted to pull my own weight in the team and prove myself.</p>
+
+		<!-- <span class="image left"><img src="images/GivJoy/GivJoy4.jpg" alt="" /></span>
+		<h3>Our Initial Steps</h3>
+		<p>ProtoHack has begun! In the beginning each member of the team had various assumptions about what we were going to build. Our initial steps in the process were establishing ground rules, aligning the team, creating a schedule for the day and identifying our problem. I proposed we try an activity similar to an affinity diagraming exercise to flesh out our assumptions. It was this exercise that helped us hone in our intial problem statement:</p>
+		<blockquote><span class="big">Our Users have trouble finding a unique way to spread joy to friends & family. Its time consuming to find unique gifts for them.</span></blockquote>
+		<p>The activity led us to the idea of a mobile marketplace and we hypothesized 3 different user archetypes for the platform. We decided to identify 2 groups, Joy-senders and joy-receivers on the endpoints of the application. The third archetype we hypothesized were the <strong>creatives</strong> who were the basis for the marketplace. The creatives are people who have some sort of creative talent to bring joy to other people. We decided that the platform would work based around these 3 groups.  </p>
+		<blockquote><span class="big">Wouldn't it be great if there was a platform to <strong>give joy</strong> to your loved ones?</span></blockquote>
+		<p>The affinity mapping exercise also revealed that we would need to do more research to <strong>validate our hypotheses</strong>. Together we needed to validate with real people whether the joy bringing platform would be a viable idea. We needed to figure out "What incites joy in people?", "Should gift-giving be part of our solution?" and "What motivation do people have in giving joy?"</p>
+
+		<div class="row">
+			<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/user-groups.png" alt="" /></span></div>
+			<div class=" 6u$ 12u$(medium)"><blockquote>We decided that the scope of the hackthon would be designing a user flow for the <strong>joy-sender</strong>. Much of the research we needed to do had to identify what was important to our user flow on the side of the joy-sender. </blockquote></div>
+		</div>
 
 
 			<!-- 		<div class="4u"><span class="image fit"><img src="images/GivJoy/sender.png" alt="" /></span></div>
@@ -105,26 +104,26 @@
 					<!-- </div> -->
 					<h3>Research</h3>
 					<p>Myself and the other UX Designer took to the streets to get some quick validation of our concept. The questions we decided to ask focused on motivations and needs of the <strong>joy-sender</strong>.</p>
-				<ol>
-					<li>Tell us about the last time you gave a gift to someone that wasn't a special occasion. What was their reaction?</li>
-					<li>How did you know what to get that person? Where did you get it from?</li>
-					<li>What was the most memorable gift you have ever recieved not for an occasion? Why was it so special?</li>
-				</ol>
-				<p>We managed to interview 7 people in the time we scheduled for research. After directly returning to our team we were able to sythesize a few key insights from our interviews:</p>
-				<ol>
-					<li>We found that in almost all cases when we asked the participant to recall their most memorable gift that the gift was <strong>not a purely physical gift</strong>. Most of the time the most salient part of the memory was the person or emotion associated with the gift.</li>
-					<li>In almost all cases the most memorable gift invloved some <strong>element of surprise</strong>.</li>
-					<li>When asked about their motivation behind sending a gift to a loved one–much of the time the gift was given to <strong>console</strong> them.</li>
+					<ol>
+						<li>Tell us about the last time you gave a gift to someone that wasn't a special occasion. What was their reaction?</li>
+						<li>How did you know what to get that person? Where did you get it from?</li>
+						<li>What was the most memorable gift you have ever recieved not for an occasion? Why was it so special?</li>
+					</ol>
+					<p>We managed to interview 7 people in the time we scheduled for research. After directly returning to our team we were able to sythesize a few key insights from our interviews:</p>
+					<ol>
+						<li>We found that in almost all cases when we asked the participant to recall their most memorable gift that the gift was <strong>not a purely physical gift</strong>. Most of the time the most salient part of the memory was the person or emotion associated with the gift.</li>
+						<li>In almost all cases the most memorable gift invloved some <strong>element of surprise</strong>.</li>
+						<li>When asked about their motivation behind sending a gift to a loved one–much of the time the gift was given to <strong>console</strong> them.</li>
 
-				</ol>
+					</ol>
 
-				<h3>User Flow & Sketches</h3>
-				<div class="row">
-					<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/sender-flow.jpg" alt="" /></span></div>
-					<div class=" 6u$ 12u$(medium)"><blockquote>As we designed a user flow for the joy-sender we tried to take into account the insights we gained from our research.<br/><br/>The sketches we're drawn by me with help from one of the marketing individuals.</blockquote></div>
-				</div>
-				<span class="image fit"><img src="images/GivJoy/sketches.jpg" alt="" /></span>
-				<p>
+					<h3>User Flow & Sketches</h3>
+					<div class="row">
+						<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/sender-flow.jpg" alt="" /></span></div>
+						<div class=" 6u$ 12u$(medium)"><blockquote>As we designed a user flow for the joy-sender we tried to take into account the insights we gained from our research.<br/><br/>The sketches we're drawn by me with help from one of the marketing individuals.</blockquote></div>
+					</div>
+					<span class="image fit"><img src="images/GivJoy/sketches.jpg" alt="" /></span>
+					<p>
 						With these sketches we were able to create a low-fidelity prototype in InVision. It was at this point that we decided to stop and work on our presentation
 					</p>
 					<h3>Next Steps</h3>
@@ -153,44 +152,44 @@
 								<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p> -->
 
 <!-- 							</div>
- -->						</section>
-						<header class="style3">
-						<h2>User Flow<span class="x">&times;</span>Sketches</h2>
+-->						</section>
+<header class="style3">
+	<h2>User Flow<span class="x">&times;</span>Sketches</h2>
 <!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 -->					</header>
-						<section id="cta" class="wrapper style5">
-							<div class="inner">
-								<header>
-									<h2>Low Fidelity Prototype</h2>
-									<p>Our low fidelity prototype in Invision</p>
-								</header>
-								<ul class="actions vertical">
-									<li><a href="#" class="button fit">Go!</a></li>
-								</ul>
-							</div>
-						</section>
-					</article>
+<section id="cta" class="wrapper style5">
+	<div class="inner">
+		<header>
+			<h2>Low Fidelity Prototype</h2>
+			<p>Our low fidelity prototype in Invision</p>
+		</header>
+		<ul class="actions vertical">
+			<li><a href="#" class="button fit">Go!</a></li>
+		</ul>
+	</div>
+</section>
+</article>
 
-					<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://www.facebook.com/erchsm" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="https://instagram.com/smitten___/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
-						</ul>
-					</footer>
+<!-- Footer -->
+<footer id="footer">
+	<ul class="icons">
+		<li><a href="https://www.facebook.com/erchsm" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+		<li><a href="https://instagram.com/smitten___/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+		<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
+	</ul>
+	<ul class="copyright">
+		<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
+	</ul>
+</footer>
 
-				</div>
+</div>
 
-				<!-- Scripts -->
-				<script src="js/jquery.min.js"></script>
-				<script src="js/jquery.scrollex.min.js"></script>
-				<script src="js/jquery.scrolly.min.js"></script>
-				<script src="js/skel.min.js"></script>
-				<script src="js/init.js"></script>
+<!-- Scripts -->
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery.scrollex.min.js"></script>
+<script src="js/jquery.scrolly.min.js"></script>
+<script src="js/skel.min.js"></script>
+<script src="js/init.js"></script>
 
-			</body>
-			</html>
+</body>
+</html>
