--- a/index.html
+++ b/index.html
@@ -54,50 +54,45 @@
 			<div class="inner">
 				<header class="major">
 					<h2>Hi, I'm Eric!</h2>
-					<p>I'm a UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. I also love taking photos and I really enjoy a good nature walk. Below are some case studies I've worked on. For code samples check out my <a href="http://github.com/ecsmith">github</a>.
+					<p>I'm a UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. I also love taking photos and I really enjoy a good nature walk. Below are some case studies I've worked on. For code samples check out my <a href="http://github.com/ecsmith">Github</a>.
 					</p>
 				</header>
-							<!-- <ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul> -->
-						</div>
-					</section>
+			</div>
+		</section>
 
-					<!-- Two -->
-					<section id="two" class="wrapper alt style5">
-						<section class="spotlight">
-							<div class="image"><img src="images/GivJoy/Logo-01.png" alt="" /></div><div class="content">
-							<h2>Case Study:<br />
-								ProtoHack &times; GivJoy</h2>
-								<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
-								<ul class="actions">
-									<li><a href="givjoy.html" class="button">Learn More</a></li>
-								</ul>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/M-E/master/screenshots/iphonegold.jpg" alt="" /></div><div class="content">
-							<h2>M&E</h2>
-							<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/box-app/gh-pages/screenshots/flat_browser.png" alt="" /></div><div class="content">
-						<h2>Box Secure Sharing Application</h2>
-						<p></p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
-					</div>
-				</section>
+		<!-- Two -->
+		<section id="two" class="wrapper alt style5">
+			<section class="spotlight">
+				<div class="image"><img src="images/GivJoy/Logo-01.png" alt="" /></div><div class="content">
+				<h2>Case Study:<br />
+					ProtoHack &times; GivJoy</h2>
+					<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
+					<ul class="actions">
+						<li><a href="givjoy.html" class="button">Learn More</a></li>
+					</ul>
+				</div>
 			</section>
+			<section class="spotlight">
+				<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/M-E/master/screenshots/iphonegold.jpg" alt="" /></div><div class="content">
+				<h2>M&E</h2>
+				<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat.</p>
+				<ul class="actions">
+					<li><a href="#" class="button">Learn More</a></li>
+				</ul>
+			</div>
+		</section>
+		<section class="spotlight">
+			<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/box-app/gh-pages/screenshots/flat_browser.png" alt="" /></div><div class="content">
+			<h2>Box Secure Sharing Application</h2>
+			<p></p>
+			<ul class="actions">
+				<li><a href="#" class="button">Learn More</a></li>
+			</ul>
+		</div>
+	</section>
+</section>
 
-			<!-- Three -->
+<!-- Three -->
 					<!-- <section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
