--- a/index.html
+++ b/index.html
@@ -68,25 +68,35 @@
 					ProtoHack &times; GivJoy</h2>
 					<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
 					<ul class="actions">
-						<li><a href="givjoy.html" class="button">Learn More</a></li>
+						<li><a href="givjoy.html" class="button fit">Learn More</a></li>
+					</ul>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="images/Scholastic_logo.png" alt="" /></div><div class="content">
+				<h2>Case Study:<br />
+					Scholastic</h2>
+					<p>My team and I were asked to take advantage of digital technology to encourage children to read books outside of school. We came up with two features that could be seamlessly integrated into Scholastic's existing website.</p>
+					<ul class="actions">
+						<li><a href="givjoy.html" class="button fit">Learn More</a></li>
 					</ul>
 				</div>
 			</section>
 			<section class="spotlight">
 				<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/M-E/master/screenshots/iphonegold.jpg" alt="" /></div><div class="content">
-				<h2>M&E</h2>
+				<h2>Case Study: M&E</h2>
 				<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat.</p>
 				<ul class="actions">
-					<li><a href="#" class="button">Learn More</a></li>
+					<li><a href="#" class="button fit">Learn More</a></li>
 				</ul>
 			</div>
 		</section>
 		<section class="spotlight">
 			<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/box-app/gh-pages/screenshots/flat_browser.png" alt="" /></div><div class="content">
-			<h2>Box Secure Sharing Application</h2>
+			<h2>Case Study: Box Secure Sharing Application</h2>
 			<p></p>
 			<ul class="actions">
-				<li><a href="#" class="button">Learn More</a></li>
+				<li><a href="https://github.com/ecsmith/box-app" class="button fit">Learn More</a></li>
 			</ul>
 		</div>
 	</section>
@@ -137,7 +147,7 @@
 								<p></p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf" class="button fit special">My Resume</a></li>
+								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf" class="button fit">My Resume</a></li>
 								<li><a href="#" class="button fit">Email Me</a></li>
 							</ul>
 						</div>
@@ -146,7 +156,7 @@
 					<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
 							<li><a href="https://instagram.com/smitten___/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
 						</ul>
