changed picture again

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 				<h2>Eric S.<br/>UI <span class="x">&times;</span> UX</h2>
 				<p></p>
 			</div>
+			<div class="trigger"></div>
+
 			<a href="#one" class="more scrolly">Learn More</a>
 		</section>
 
@@ -78,7 +80,7 @@
 					Scholastic</h2>
 					<p>My team and I were asked to take advantage of digital technology to encourage children to read books outside of school. We came up with two features that could be seamlessly integrated into Scholastic's existing website.</p>
 					<ul class="actions">
-						<li><a href="givjoy.html" class="button fit">Learn More</a></li>
+						<li><a href="scholastic.html" class="button fit">Learn More</a></li>
 					</ul>
 				</div>
 			</section>
