--- a/scholastic.html
+++ b/scholastic.html
@@ -48,56 +48,70 @@
 			</header>
 			<section class="wrapper style5">
 				<div class="inner">
-					<blockquote><span class="big">When was the last time you made someone's day?</span></blockquote> <br/>
-					<blockquote>Sarah, a marketing specialist posed the above prompt in her initial pitch for the idea of GivJoy at the beginning of ProtoHack. This question really resonated with me and I decided to join their team and help them solve their problem.</blockquote>
-<!-- 		<div class="row">
-			<div class="3u 12u$(medium)">
-				
-			</div>
-			<div class="9u$ 12u$(medium)">--><h4>GivJoy</h4> 
-				<p>Givjoy is a mobile application for allowing a person to bring joy to their friends. GivJoy does this by creating a marketplace for wherein a joy-sender can employ a person with a joy-giving, creative talents to bring joy to their friends. GivJoy was created at ProtoHack, a code-free hackathon, in 9 hours.</p>
-				<h4>Uncertainties</h4>
-				<p>Going into ProtoHack I had no idea what to expect. As a web developer, the idea of a strictly <strong>no coding</strong> hackthon seemed backwards to me. If there's been something I've learned about the design world it's that designers get passionate about their designs–I was fearful of how this would come into play in this space.
-				</p>
-				<p>
-					&horbar;To say the least I was <strong>anxious</strong> about what the day would bring. The turnout of ProtoHack mostly consisted of buisiness development professionals, UX designers and marketers. They gave us the morning of ProtoHack to build teams and comes up with ideas for a product. Many passionate individuals even took to the stage to pitch their ideas hoping to find the talent needed to act on them.</p>
-					<!-- </div> -->
-
-
-					<!-- </div> -->
 					<div class="row">
-						<div class="3u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/protohack.png" alt="" /></span></div>
+						<div class="3u 12u$(medium)">
+						<b>THE CLIENT:</b>
+						</div>
+						 <div class="8u$ 12u$(medium)">
+						Scholastic is the world's leading publisher and distributor of children's books. 
+						</div>                           
+						<div class="3u 12u$(medium)">
+						<b>THE TASK:</b>
+						</div>
+						 <div class="8u$ 12u$(medium)">
+						We were asked to take advantage of digital technology and positive role models to encourage children to read books outside of school. 
+						</div> 
+							 
 
-						<div class="9u$ 12u$(medium)">
-							<h4>About ProtoHack</h4>
-							<p>ProtoHack exists to show non-coders that they can create something amazing from nothing. It empowers and enables the non-technical community with the tools, knowledge and connections that will help bring their idea to life and visually communicate it through prototyping.
-								Competitors may work in teams (up to 5) or solo. You have 9 hours to prototype your idea and then you present it on stage.</p>
+							THE PROBLEM: We discovered from our interviews and surveys that children were not reading on digital devices. It was also revealed that the approach to integrating a role model was not necessary. The real challenge was finding a way for children to choose and find paper books in a fun and exciting way. 
 
-							</div>
+							THE SOLUTION: A new bookshelf and quiz feature to encourage children to read outside of school. 
 						</div>
 					</div>
-				</section>
-				<header class="style7">
-					<h2>My Team<span class="x">&times;</span>The Beginning</h2>
-				</header>
-				<section class="wrapper style5">
-					<div class="inner">
+					<div class="9u$ 12u$(medium)"><h4>GivJoy</h4> 
+						<p>Givjoy is a mobile application for allowing a person to bring joy to their friends. GivJoy does this by creating a marketplace for wherein a joy-sender can employ a person with a joy-giving, creative talents to bring joy to their friends. GivJoy was created at ProtoHack, a code-free hackathon, in 9 hours.</p>
+						<h4>Uncertainties</h4>
+						<p>Going into ProtoHack I had no idea what to expect. As a web developer, the idea of a strictly <strong>no coding</strong> hackthon seemed backwards to me. If there's been something I've learned about the design world it's that designers get passionate about their designs–I was fearful of how this would come into play in this space.
+						</p>
+						<p>
+							&horbar;To say the least I was <strong>anxious</strong> about what the day would bring. The turnout of ProtoHack mostly consisted of buisiness development professionals, UX designers and marketers. They gave us the morning of ProtoHack to build teams and comes up with ideas for a product. Many passionate individuals even took to the stage to pitch their ideas hoping to find the talent needed to act on them.</p>
+							<!-- </div> -->
 
-						<h3>My Role in our Team</h3>
-						<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development experts and 1 other UX Designer besides myself. I was by far the most junior person in the team–Most of the others had been in their respective industries for 5+ years. I wanted to pull my own weight in the team and prove myself.</p>
 
-						<!-- <span class="image left"><img src="images/GivJoy/GivJoy4.jpg" alt="" /></span> -->
-						<h3>Our Initial Steps</h3>
-						<p>ProtoHack has begun! In the beginning each member of the team had various assumptions about what we were going to build. Our initial steps in the process were establishing ground rules, aligning the team, creating a schedule for the day and identifying our problem. I proposed we try an activity similar to an affinity diagraming exercise to flesh out our assumptions. It was this exercise that helped us hone in our intial problem statement:</p>
-						<blockquote><span class="big">Our Users have trouble finding a unique way to spread joy to friends & family. Its time consuming to find unique gifts for them.</span></blockquote>
-						<p>The activity led us to the idea of a mobile marketplace and we hypothesized 3 different user archetypes for the platform. We decided to identify 2 groups, Joy-senders and joy-receivers on the endpoints of the application. The third archetype we hypothesized were the <strong>creatives</strong> who were the basis for the marketplace. The creatives are people who have some sort of creative talent to bring joy to other people. We decided that the platform would work based around these 3 groups.  </p>
-						<blockquote><span class="big">Wouldn't it be great if there was a platform to <strong>give joy</strong> to your loved ones?</span></blockquote>
-						<p>The affinity mapping exercise also revealed that we would need to do more research to <strong>validate our hypotheses</strong>. Together we needed to validate with real people whether the joy bringing platform would be a viable idea. We needed to figure out "What incites joy in people?", "Should gift-giving be part of our solution?" and "What motivation do people have in giving joy?"</p>
+							<!-- </div> -->
+							<div class="row">
+								<div class="3u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/protohack.png" alt="" /></span></div>
 
-						<div class="row">
-							<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/user-groups.png" alt="" /></span></div>
-							<div class=" 6u$ 12u$(medium)"><blockquote>We decided that the scope of the hackthon would be designing a user flow for the <strong>joy-sender</strong>. Much of the research we needed to do had to identify what was important to our user flow on the side of the joy-sender. </blockquote></div>
-						</div>
+								<div class="9u$ 12u$(medium)">
+									<h4>About ProtoHack</h4>
+									<p>ProtoHack exists to show non-coders that they can create something amazing from nothing. It empowers and enables the non-technical community with the tools, knowledge and connections that will help bring their idea to life and visually communicate it through prototyping.
+										Competitors may work in teams (up to 5) or solo. You have 9 hours to prototype your idea and then you present it on stage.</p>
+
+									</div>
+								</div>
+							</div>
+						</section>
+						<header class="style7">
+							<h2>My Team<span class="x">&times;</span>The Beginning</h2>
+						</header>
+						<section class="wrapper style5">
+							<div class="inner">
+
+								<h3>My Role in our Team</h3>
+								<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development experts and 1 other UX Designer besides myself. I was by far the most junior person in the team–Most of the others had been in their respective industries for 5+ years. I wanted to pull my own weight in the team and prove myself.</p>
+
+								<!-- <span class="image left"><img src="images/GivJoy/GivJoy4.jpg" alt="" /></span> -->
+								<h3>Our Initial Steps</h3>
+								<p>ProtoHack has begun! In the beginning each member of the team had various assumptions about what we were going to build. Our initial steps in the process were establishing ground rules, aligning the team, creating a schedule for the day and identifying our problem. I proposed we try an activity similar to an affinity diagraming exercise to flesh out our assumptions. It was this exercise that helped us hone in our intial problem statement:</p>
+								<blockquote><span class="big">Our Users have trouble finding a unique way to spread joy to friends & family. Its time consuming to find unique gifts for them.</span></blockquote>
+								<p>The activity led us to the idea of a mobile marketplace and we hypothesized 3 different user archetypes for the platform. We decided to identify 2 groups, Joy-senders and joy-receivers on the endpoints of the application. The third archetype we hypothesized were the <strong>creatives</strong> who were the basis for the marketplace. The creatives are people who have some sort of creative talent to bring joy to other people. We decided that the platform would work based around these 3 groups.  </p>
+								<blockquote><span class="big">Wouldn't it be great if there was a platform to <strong>give joy</strong> to your loved ones?</span></blockquote>
+								<p>The affinity mapping exercise also revealed that we would need to do more research to <strong>validate our hypotheses</strong>. Together we needed to validate with real people whether the joy bringing platform would be a viable idea. We needed to figure out "What incites joy in people?", "Should gift-giving be part of our solution?" and "What motivation do people have in giving joy?"</p>
+
+								<div class="row">
+									<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/user-groups.png" alt="" /></span></div>
+									<div class=" 6u$ 12u$(medium)"><blockquote>We decided that the scope of the hackthon would be designing a user flow for the <strong>joy-sender</strong>. Much of the research we needed to do had to identify what was important to our user flow on the side of the joy-sender. </blockquote></div>
+								</div>
 
 
 			<!-- 		<div class="4u"><span class="image fit"><img src="images/GivJoy/sender.png" alt="" /></span></div>
