--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/images/banner5.jpg" />
 	<meta prefix="og: http://ogp.me/ns#" />
 	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/images/banner5.jpg"/>
-	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. For code samples check out my Github.">
+	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="keywords" content="" />
