Scholastic Case Study work

--- a/givjoy.html
+++ b/givjoy.html
@@ -158,11 +158,10 @@
 
 <!-- 							</div>
 -->						</section>
-<header class="style3">
+<!-- <header class="style3">
 	<h2>User Flow<span class="x">&times;</span>Sketches</h2>
-<!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
--->					</header>
-<section id="cta" class="wrapper style5">
+		</header> -->
+<!-- <section id="cta" class="wrapper style5">
 	<div class="inner">
 		<header>
 			<h2>Low Fidelity Prototype</h2>
@@ -172,7 +171,7 @@
 			<li><a href="#" class="button fit">Go!</a></li>
 		</ul>
 	</div>
-</section>
+</section> -->
 </article>
 
 <!-- Footer -->
