--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<!-- Two -->
 		<section id="two" class="wrapper alt style5">
 			<section class="spotlight">
-				<div class="image"><img src="images/GivJoy/Logo-01.png" alt="" /></div><div class="content">
+				<div class="image"><img src="images/GivJoy/Logo_circle.jpg" alt="" /></div><div class="content">
 				<h2>Mobile Design:<br />
 					ProtoHack &times; GivJoy</h2>
 					<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
@@ -88,7 +88,7 @@
 				</div>
 			</section>
 			<section class="spotlight">
-				<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/M-E/master/screenshots/iphonegold.jpg" alt="" /></div><div class="content">
+				<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/M-E/master/screenshots/iphonegold_circle.jpg" alt="" /></div><div class="content">
 				<h2>Mobile Design: M&E</h2>
 				<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat.</p>
 				<ul class="actions">
@@ -97,7 +97,7 @@
 			</div>
 		</section>
 		<section class="spotlight">
-			<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/box-app/gh-pages/screenshots/flat_browser.png" alt="" /></div><div class="content">
+			<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/box-app/gh-pages/screenshots/Scholastic_logo.jpg" alt="" /></div><div class="content">
 			<h2>Google Chrome Application: Box Secure Sharing</h2>
 			<p></p>
 			<ul class="actions">
