--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<div class="inner">
 				<header class="major">
 					<h2>Hi, I'm Eric!</h2>
-					<p>I'm a UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. I also love taking photos and I really enjoy a good nature walk. Below are some case studies I've worked on. For code samples check out my <a href="http://github.com/ecsmith">Github</a>.
+					<p>I'm a UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. I also love taking photos and I really enjoy a good nature walk. Below are some case studies I've worked on. For my code samples check out my <a href="http://github.com/ecsmith">Github</a>.
 					</p>
 				</header>
 			</div>
