--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<title>Eric Smith's Portfolio</title>
 	<link rel="shortcut icon" href="favicon.ico" />
-	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/images/banner5.jpg" />
+	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/images/banner.jpg" />
 	<meta prefix="og: http://ogp.me/ns#" />
-	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/images/banner5.jpg"/>
+	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/images/banner.jpg"/>
+	<meta property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/images/banner.jpg"/>
 	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -58,8 +59,10 @@
 		<section id="one" class="wrapper style5 special">
 			<div class="inner">
 				<header class="major">
-					<h2>Hi, I'm Eric!</h2>
-					<p>I'm a UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. I also love taking photos and I really enjoy a good nature walk. Below are some case studies I've worked on. For my code samples check out my <a href="http://github.com/ecsmith">Github</a>.
+					<h2>Hi there. I'm Eric!</h2>
+					<p>I'm a UX Designer located in the SF Bay Area. When im not designing I'm either taking photos or out enjoying some nature. I've prepared this site to showcase my work. Below are some case studies I've worked on. For my code samples check out my <a href="http://github.com/ecsmith">Github</a>.
+					</p><p>
+					For me UX is the perfect intersection of Computer Science, Customer Service and Creative Thinking. My background in engineering and front-end development allows me to work more effectively with developers. My experience working in a cooperative has also given me skills to excel in any team environment.
 					</p>
 				</header>
 			</div>
@@ -68,7 +71,7 @@
 		<!-- Two -->
 		<section id="two" class="wrapper alt style5">
 			<section class="spotlight">
-				<div class="image"><img src="images/GivJoy/Logo_circle.jpg" alt="" /></div><div class="content">
+				<div class="image"><img src="images/GivJoy/Logo_circle.png" alt="" /></div><div class="content">
 				<h2>Mobile Design:<br />
 					ProtoHack &times; GivJoy</h2>
 					<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
