--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>If you would like to work with me...</h2>
-								<p></p>
+								<h2>I'd love to hear from you!</h2>
+								<p>Send me an email &horbar; Oh and here's my resume!</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf" class="button fit">My Resume</a></li>
@@ -168,9 +168,9 @@
 							<li><a href="https://instagram.com/smitten___/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
 						</ul>
-						<ul class="copyright">
+						<!-- <ul class="copyright">
 							<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
-						</ul>
+						</ul> -->
 					</footer>
 
 				</div>
