--- a/index.html
+++ b/index.html
@@ -60,114 +60,77 @@
 			<div class="inner">
 				<header class="major">
 					<h2>Hi there. I'm Eric!</h2>
-					<p>I'm a UX Designer located in the SF Bay Area. When im not designing I'm either taking photos or out enjoying some nature. I've prepared this site to showcase my work. Below are some case studies I've worked on. For my code samples check out my <a href="http://github.com/ecsmith">Github</a>.
+					<p><br/>I'm a UX Designer located in the SF Bay Area. When im not designing I'm either taking photos or out enjoying some nature. I've prepared this site to showcase my work. Below are some case studies I've worked on. For my code samples check out my <a href="http://github.com/ecsmith">Github</a>.
 					</p><p>
 					For me UX is the perfect intersection of Computer Science, Customer Service and Creative Thinking. My background in engineering and front-end development allows me to work more effectively with developers. My experience working in a cooperative has also given me skills to excel in any team environment.
-					</p>
-				</header>
-			</div>
-		</section>
+				</p>
+			</header>
+		</div>
+	</section>
 
-		<!-- Two -->
-		<section id="two" class="wrapper alt style5">
-			<section class="spotlight">
-				<div class="image"><img src="images/GivJoy/Logo_circle.png" alt="" /></div><div class="content">
-				<h2>Mobile Design:<br />
-					ProtoHack &times; GivJoy</h2>
-					<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
-					<ul class="actions">
-						<li><a href="givjoy.html" class="button fit">Learn More</a></li>
-					</ul>
-				</div>
-			</section>
-			<section class="spotlight">
-				<div class="image"><img src="images/Scholastic_logo.png" alt="" /></div><div class="content">
-				<h2>UX Strategy:<br />
-					Scholastic</h2>
-					<p>My team and I were asked to take advantage of digital technology to encourage children to read books outside of school. We came up with two features that could be seamlessly integrated into Scholastic's existing website.</p>
-					<ul class="actions">
-						<li><a href="scholastic.html" class="button fit">Learn More</a></li>
-					</ul>
-				</div>
-			</section>
-			<section class="spotlight">
-				<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/M-E/master/screenshots/iphonegold_circle.jpg" alt="" /></div><div class="content">
-				<h2>Mobile Design: M&E</h2>
-				<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat.</p>
+	<!-- Two -->
+	<section id="two" class="wrapper  style5">
+		<section class="spotlight">
+			<div class="image"><img src="images/GivJoy/case-study-image.png" alt="" /></div><div class="content">
+			<h2>Mobile Design:<br />
+				ProtoHack &times; GivJoy</h2>
+				<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
 				<ul class="actions">
-					<li><a href="https://github.com/ecsmith/M-E" class="button fit">Learn More</a></li>
+					<li><a href="givjoy.html" class="button fit">Learn More</a></li>
 				</ul>
 			</div>
 		</section>
 		<section class="spotlight">
-			<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/box-app/gh-pages/screenshots/Scholastic_logo.jpg" alt="" /></div><div class="content">
-			<h2>Google Chrome Application: Box Secure Sharing</h2>
-			<p></p>
+			<div class="image"><img src="images/Lightning Strikes/Eric/case-study-image.png" alt="" /></div><div class="content">
+			<h2>UX Strategy:<br />
+				Scholastic</h2>
+				<p>My team and I were asked to take advantage of digital technology to encourage children to read books outside of school. We came up with two features that could be seamlessly integrated into Scholastic's existing website.</p>
+				<ul class="actions">
+					<li><a href="scholastic.html" class="button fit">Learn More</a></li>
+				</ul>
+			</div>
+		</section>
+		<section class="spotlight">
+			<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/M-E/master/screenshots/case-study-image.png" alt="" /></div><div class="content">
+			<h2>Mobile Design: M&E</h2>
+			<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat. Our target audience was college age students. The application allows user to plan meetups using scales such as time, date and location preferences.</p>
 			<ul class="actions">
-				<li><a href="https://github.com/ecsmith/box-app" class="button fit">Learn More</a></li>
+				<li><a href="https://github.com/ecsmith/M-E" class="button fit">Learn More</a></li>
 			</ul>
-		</div>
+		</div>    
 	</section>
+	<section class="spotlight">
+		<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/box-app/gh-pages/screenshots/case-study-image.png" alt="" /></div><div class="content">
+		<h2>Chrome Extension: Box Secure Sharing</h2>
+		<p>This Chrome Extension is designed for two box users to securely transfer files. This was an exercise in using the Box API and crafting a experience that allows the users feel secure in transfering their files.</p>
+		<ul class="actions">
+			<li><a href="https://github.com/ecsmith/box-app" class="button fit">Learn More</a></li>
+		</ul>
+	</div>
+</section>
 </section>
 
-<!-- Three -->
-					<!-- <section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-							</ul>
-						</div>
-					</section> -->
+<!-- CTA -->
+<section id="cta" class="wrapper style4">
+	<div class="inner">
+		<header>
+			<h2>I'd love to hear from you!</h2>
+			<p>Send me an email &horbar; Oh and here's my resume!</p>
+		</header>
+		<ul class="actions vertical">
+			<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf" class="button fit">My Resume</a></li>
+			<li><a href="#" class="button fit">Email Me</a></li>
+		</ul>
+	</div>
+</section>
 
-					<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>I'd love to hear from you!</h2>
-								<p>Send me an email &horbar; Oh and here's my resume!</p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf" class="button fit">My Resume</a></li>
-								<li><a href="#" class="button fit">Email Me</a></li>
-							</ul>
-						</div>
-					</section>
-
-					<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-							<li><a href="https://instagram.com/smitten___/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
-						</ul>
+<!-- Footer -->
+<footer id="footer">
+	<ul class="icons">
+		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+		<li><a href="https://instagram.com/smitten___/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+		<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
+	</ul>
 						<!-- <ul class="copyright">
 							<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
 						</ul> -->
