--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	<section class="spotlight">
 		<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/box-app/gh-pages/screenshots/case-study-image.png" alt="" /></div><div class="content">
 		<h2>Chrome Extension: Box Secure Sharing</h2>
-		<p>This Chrome Extension is designed for two box users to securely transfer files. This was an exercise in using the Box API and crafting a experience that allows the users feel secure in transfering their files.</p>
+		<p>This Chrome Extension is designed for two Box users to securely transfer files. This was an exercise in using the Box API and crafting a experience that allows the users feel secure in transfering their files.</p>
 		<ul class="actions">
 			<li><a href="https://github.com/ecsmith/box-app" class="button fit">Learn More</a></li>
 		</ul>
