--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		<section class="spotlight">
 			<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/M-E/master/screenshots/case-study-image.png" alt="" /></div><div class="content">
 			<h2>Mobile Design: M&E</h2>
-			<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat. Our target audience was college students. The application allows user to plan meetups using scales such as time, date and location preferences.</p>
+			<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat. Our target audience was college students. The application allows users to plan meetups using scales such as time, date and location preferences.</p>
 			<ul class="actions">
 				<li><a href="https://github.com/ecsmith/M-E" class="button fit">Learn More</a></li>
 			</ul>
