--- a/scholastic.html
+++ b/scholastic.html
@@ -183,10 +183,10 @@
 							<li><a href="https://instagram.com/smitten___/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
 						</ul>
-						<ul class="copyright">
+						<!-- <ul class="copyright">
 							<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
 						</ul>
-					</footer>
+ -->					</footer>
 
 				</div>
 
