--- a/scholastic.html
+++ b/scholastic.html
@@ -30,10 +30,10 @@
 						<div id="menu">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="givjoy.html">1. ProtoHack & GivJoy</a></li>
-								<li><a href="scholastic.html">2. Scholastic</a></li>
-								<li><a href="https://github.com/ecsmith/M-E">3. M&E</a></li>
-								<li><a href="https://github.com/ecsmith/box-app">4. Box Application</a></li>
+								<li><a href="givjoy.html">ProtoHack & GivJoy</a></li>
+								<li><a href="scholastic.html">Scholastic</a></li>
+								<li><a href="https://github.com/ecsmith/M-E">M&E</a></li>
+								<li><a href="https://github.com/ecsmith/box-app">Box Application</a></li>
 								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf">My Resume</a></li>
 								<li><a href="#">Contact</a></li>
 							</ul>
