--- a/scholastic.html
+++ b/scholastic.html
@@ -30,11 +30,11 @@
 						<div id="menu">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="givjoy.html">ProtoHack & GivJoy</a></li>
+								<li><a href="givjoy.html">GivJoy</a></li>
 								<li><a href="scholastic.html">Scholastic</a></li>
 								<li><a href="https://github.com/ecsmith/M-E">M&E</a></li>
-								<li><a href="https://github.com/ecsmith/box-app">Box Application</a></li>
-								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf">My Resume</a></li>
+								<li><a href="https://github.com/ecsmith/box-app">Box</a></li>
+								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
 								<li><a href="#">Contact</a></li>
 							</ul>
 						</div>
