--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class="inner">
 				<header class="major">
 					<h2>Hi there. I'm Eric!</h2>
-					<p><br/>I'm a UX Designer located in the SF Bay Area. When im not designing I'm either taking photos or out enjoying some nature. I've prepared this site to showcase my work. Below are some case studies I've worked on. For my code samples check out my <a href="http://github.com/ecsmith">Github</a>.
+					<p><br/>I'm a UX Designer and UI Engineer located in the SF Bay Area. When im not designing I'm either taking photos or out enjoying some nature. I've prepared this site to showcase my work. Below are some case studies I've worked on. For my code samples check out my <a href="http://github.com/ecsmith">Github</a>.
 					</p><p>
 					For me UX is the perfect intersection of Computer Science, Customer Service and Creative Thinking. My background in engineering and front-end development allows me to work more effectively with developers. My experience working in a cooperative has also given me skills to excel in any team environment.
 				</p>
