added helix sync

--- a/index.html
+++ b/index.html
@@ -71,12 +71,22 @@
 	<!-- Two -->
 	<section id="two" class="wrapper  style5">
 		<section class="spotlight">
+			<div class="image"><img src="images/Perforce/case-study-image.png" alt="" /></div><div class="content">
+			<h2>Interaction Design:
+				Helix Sync</h2>
+				<p>Helix Sync is a project I worked on at Perforce. The goal of this desktop application is to make version control more accessible</p>
+				<ul class="actions">
+					<li><a href="givjoy.html" class="button fit">Learn More</a></li>
+				</ul>
+			</div>
+		</section>
+		<section class="spotlight">
 			<div class="image"><img src="images/GivJoy/case-study-image.png" alt="" /></div><div class="content">
 			<h2>Mobile Design:<br />
 				ProtoHack &times; GivJoy</h2>
 				<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
 				<ul class="actions">
-					<li><a href="givjoy.html" class="button fit">Learn More</a></li>
+					<li><a href="" class="button fit">Learn More</a></li>
 				</ul>
 			</div>
 		</section>
