--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 			<div class="inner">
 				<header class="major">
 					<h2>Hi there. I'm Eric!</h2>
-					<p><br/>I'm a UX Designer and UI Engineer located in the SF Bay Area. When im not designing I'm either taking photos or out enjoying some nature. I've prepared this site to showcase my work. Below are some case studies I've worked on. For my code samples check out my <a href="http://github.com/ecsmith">Github</a>.
+					<p><br/>I'm a UX Designer and UI Engineer located in the SF Bay Area. I've coded this site with my own 2 hands as a way to showcase my work. Below you'll find some case studies I've worked on. For my code samples check out my <a href="http://github.com/ecsmith">Github</a>. When im not designing or coding I'm either taking photos or out enjoying some nature.
 					</p><p>
-					For me UX is the perfect intersection of Computer Science, Customer Service and Creative Thinking. My background in engineering and front-end development allows me to work more effectively with developers. My experience working in a cooperative has also given me skills to excel in any team environment.
+					For me UX is the perfect intersection of Computer Science, Customer Service and Creative Thinking. My background in engineering and design allows me to act a bridge in communication for both designers & engineers. My experience working in a cooperative has also given me skills to excel in any team environment.
 				</p>
 			</header>
 		</div>
