--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class="inner">
 				<header class="major">
 					<h2>Hi there. I'm Eric!</h2>
-					<p><br/>I'm a UX Designer and UI Engineer located in the SF Bay Area. I've coded this site with my own 2 hands as a way to showcase my work. Below you'll find some case studies I've worked on. For my code samples check out my <a href="http://github.com/ecsmith">Github</a>. When im not designing or coding I'm either taking photos or out enjoying some nature.
+					<p><br/>I'm a UX Designer and UI Engineer located in the SF Bay Area. I've coded this site with my own two hands as a way to showcase my work. Below you'll find some case studies I've worked on. For more code samples check out my <a href="http://github.com/ecsmith">Github</a>. When im not designing or coding I'm either taking photos or out enjoying some nature.
 					</p><p>
 					For me UX is the perfect intersection of Computer Science, Customer Service and Creative Thinking. My background in engineering and design allows me to act a bridge in communication for both designers & engineers. My experience working in a cooperative has also given me skills to excel in any team environment.
 				</p>
