--- a/givjoy.html
+++ b/givjoy.html
@@ -22,14 +22,14 @@
 
 		<!-- Header -->
 		<header id="header" >
-			<h1><a href="index.html"></a></h1>
+			<h1><a href="/"></a></h1>
 			<nav id="nav">
 				<ul>
 					<li class="special">
 						<a href="#" class="menuToggle"><span></span></a>
 						<div id="menu">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li><a href="/">Home</a></li>
 								<li><a href="givjoy.html">GivJoy</a></li>
 								<li><a href="scholastic.html">Scholastic</a></li>
 								<li><a href="https://github.com/ecsmith/M-E">M&E</a></li>
