--- a/scholastic.html
+++ b/scholastic.html
@@ -3,9 +3,10 @@
 <head>
 	<title>Eric Smith's Portfolio</title>
 	<link rel="shortcut icon" href="favicon.ico" />
-	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/img/me3.jpg" />
+	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/images/banner.png" />
 	<meta prefix="og: http://ogp.me/ns#" />
-	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/img/me3.jpg"/>
+	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/images/banner.png"/>
+	<meta property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/images/banner.png"/>
 	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. For code samples check out my Github.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
