--- a/givjoy/index.html
+++ b/givjoy/index.html
@@ -37,16 +37,16 @@
 								<li><a href="https://github.com/ecsmith/box-app">Box</a></li>
 								<li><a href="http://ecsmith.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
 								<li><a href="#">Contact</a></li>							</ul>
-						</div>
-					</li>
-				</ul>
-			</nav>
-		</header>
+							</div>
+						</li>
+					</ul>
+				</nav>
+			</header>
 
-		<!-- Main -->
-		<article id="main">
-			<header class="style2">
-				<h2>GivJoy<span class="x">&times;</span>ProtoHack</h2>
+			<!-- Main -->
+			<article id="main">
+				<header class="style2">
+					<h2>GivJoy<span class="x">&times;</span>ProtoHack</h2>
 <!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 -->					</header>
 <section class="wrapper style5">
@@ -184,16 +184,16 @@
 	<!-- <ul class="copyright">
 		<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
 	</ul>
- --></footer>
+--></footer>
 
 </div>
 
 <!-- Scripts -->
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery.scrollex.min.js"></script>
-<script src="js/jquery.scrolly.min.js"></script>
-<script src="js/skel.min.js"></script>
-<script src="js/init.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/jquery.scrollex.min.js"></script>
+<script src="../js/jquery.scrolly.min.js"></script>
+<script src="../js/skel.min.js"></script>
+<script src="../js/init.js"></script>
 
 </body>
 </html>
